Update coverage tools. Checking if it works on Travis fine.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,5 @@ notifications:
 jdk:
   - openjdk7
   - oraclejdk7
-
-# This lead to random fails on uploading.
-# script: "sbt coveralls"
+script: "sbt clean coverage test"
+after_success: "sbt coveralls"
