--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
     recipients:
       - mike.limansky@gmail.com
 jdk:
-  - openjdk7
+  - oraclejdk7
   - oraclejdk8
 script: "sbt clean coverage test"
 after_success: "sbt coveralls"
