--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ notifications:
 jdk:
   - oraclejdk7
   - oraclejdk8
-script: "sbt clean coverage test"
+script: "sbt clean coverage test coverageReport && sbt coverageAggregate"
 after_success: "sbt coveralls"
