--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
+install:
+  - pip install --user codecov
+
 language: scala
+
 scala:
-  - 2.11.8
-  - 2.10.6
-branches:
-  only:
-    - master
-notifications:
-  email:
-    recipients:
-      - mike.limansky@gmail.com
+  - 2.12.4
+  - 2.11.12
+  - 2.10.7
 jdk:
-  - oraclejdk7
   - oraclejdk8
-script: "sbt clean coverage test coverageReport && sbt coverageAggregate"
-after_success: "sbt coveralls"
+
+branches:
+  only: master
+
+script:
+  - scripts/travis-build.sh
